Fixed some unaligned elements

--- a/styles.css
+++ b/styles.css
@@ -105,9 +105,12 @@ body {
 .logo {
     grid-row: 1 / 2;
     display: flex;
-    align-items: center;
+    align-self: center;
     gap: 10px;
     font-size: 14px;
+}
+.logo > h1 {
+    margin-top: 8px;
 }
 .sidebar-tools-1 {
     grid-row: 2 / 3;
@@ -138,7 +141,7 @@ body {
     padding-left: 20px;
     padding-top: 35px;
     gap: 13px;
-    background: #FEF08A;
+    background: var(--gray);
 }
 .projects {
     grid-column: 1 / 2;
@@ -181,7 +184,8 @@ body {
     flex-direction: column;
     justify-content: space-between;
     background: #fff;
-    box-shadow: 3px 5px rgba(0,0,0,.2)
+    box-shadow: 3px 5px rgba(0,0,0,.2);
+    font-size: 0.8rem;
 }
 .trending {
     grid-column: 2 / -1;
